Fri Nov 14 12:51:16 1997  Scott Christley  <scottc@net-community.com>

	* test-application.make: New file.
	* test-tool.make: New file.
	* GNUmakefile.in: Install new files.
	* aggregate.make: Prevent multiple inclusions.
	* application.make: Likewise.
	* bundle.make: Likewise.
	* library.make: Likewise.
	* objc.make: Likewise.
	* rules.make: Likewise.
	* test-library.make: Likewise.
	* tool.make: Likewise.

Fri Nov 14 09:53:50 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* brain.make: Added defines for the GUI and backend libraries.
	* configure.in: Set the executable flag for openapp and debugapp.
	* openapp.in: Added support for target abbreviations.
	* debugapp.in: Likewise.
	* rules.make: Removed the debugging comments.

Fri Nov 14 09:31:47 1997  Scott Christley  <scottc@net-community.com>

	* config.make.in (library_combo): Rename to default_library_combo.
	* brain.make: Use the default library combo as an initial setting.

Thu Nov 13 15:08:13 1997  Scott Christley  <scottc@net-community.com>

	* rules.make: Replace dash with underscore for type not target.
	* openapp.in: Determine host information if necessary.
	* debugapp.in: Determine host information if necessary.
	* MediaBook.sh: Save original variables.
	* config.site (bindirtop): Define.
	* MediaBook.func (hostinfo, assignpaths): New functions.
	(librarycombo, systemroot, localroot, userroot): New functions.
	* GNUmakefile.in (GNUSTEP_INSTALLATION_DIR): Define.

Thu Nov 13 11:35:31 1997  Scott Christley  <scottc@net-community.com>

	* GNUstep.sh.in: Add user and local to PATH.  Make user root
	be GNUstep directory in home directory.
	* GNUmakefile.in (uninstall): Only uninstall files that we
	have installed.

Thu Nov 13 09:27:33 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* test.make: Renamed to test-library.make.

Wed Nov 12 19:12:20 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* bundle.make: Changed to work with the new rules.make rules.