@@ -96,12 +96,15 @@ endif
 $(APP_FILE): $(C_OBJ_FILES) $(OBJC_OBJ_FILES)
 	$(LD) $(ALL_LDFLAGS) $(LDOUT)$@ $(C_OBJ_FILES) $(OBJC_OBJ_FILES) \
 		$(ALL_LIB_DIRS) $(ALL_GUI_LIBS)
+ifeq ($(OBJC_COMPILER), NeXT)
 	@$(TRANSFORM_PATHS_SCRIPT) `echo $(ALL_LIB_DIRS) | sed 's/-L//g'` \
 		>$(APP_DIR_NAME)/library_paths.openapp
-ifeq ($(OBJC_COMPILER), NeXT)
 # This is a hack for OPENSTEP systems to remove the iconheader file
 # automatically generated by the makefile package.
 	rm -f $(INTERNAL_app_NAME).iconheader
+else
+	@$(TRANSFORM_PATHS_SCRIPT) `echo $(ALL_LIB_DIRS) | sed 's/-L//g'` \
+	>$(APP_DIR_NAME)/$(GNUSTEP_TARGET_CPU)/$(GNUSTEP_TARGET_OS)/$(LIBRARY_COMBO)/library_paths.openapp
 endif
 
 #
