@@ -110,14 +110,14 @@ ALL_OBJCFLAGS = $(INTERNAL_OBJCFLAGS) $(ADDITIONAL_OBJCFLAGS) \
    $(AUXILIARY_OBJCFLAGS) $(ADDITIONAL_INCLUDE_DIRS) \
    $(AUXILIARY_INCLUDE_DIRS) -I. $(SYSTEM_INCLUDES) \
    $(GNUSTEP_HEADERS_FND_FLAG) $(GNUSTEP_HEADERS_GUI_FLAG) \
-   -I$(GNUSTEP_HEADERS_TARGET_FLAG) -I$(GNUSTEP_USER_HEADERS) \
+   $(GNUSTEP_HEADERS_TARGET_FLAG) -I$(GNUSTEP_USER_HEADERS) \
    -I$(GNUSTEP_LOCAL_HEADERS) -I$(GNUSTEP_SYSTEM_HEADERS)
 
 ALL_CFLAGS = $(INTERNAL_CFLAGS) $(ADDITIONAL_CFLAGS) \
    $(AUXILIARY_CFLAGS) $(ADDITIONAL_INCLUDE_DIRS) \
    $(AUXILIARY_INCLUDE_DIRS) -I. $(SYSTEM_INCLUDES) \
    $(GNUSTEP_HEADERS_FND_FLAG) $(GNUSTEP_HEADERS_GUI_FLAG) \
-   -I$(GNUSTEP_HEADERS_TARGET_FLAG) -I$(GNUSTEP_USER_HEADERS) \
+   $(GNUSTEP_HEADERS_TARGET_FLAG) -I$(GNUSTEP_USER_HEADERS) \
    -I$(GNUSTEP_LOCAL_HEADERS) -I$(GNUSTEP_SYSTEM_HEADERS)
 
 ALL_LDFLAGS = $(ADDITIONAL_LDFLAGS) $(AUXILIARY_LDFLAGS) $(GUI_LDFLAGS) \
